--- a/settings/flask/vars.yml
+++ b/settings/flask/vars.yml
@@ -11,7 +11,7 @@ log_dir: '/var/log/{{ app_name }}'
 
 python_version: '2'
 
-db_engine: 'mysql'
+db_engine: 'mysql' # 'postgresql+psycopg2'
 
 virtualenv_path: '{{ app_user_home }}/env'
 
