--- a/roles/tornado/tasks/main.yml
+++ b/roles/tornado/tasks/main.yml
@@ -16,3 +16,8 @@
   template: src=supervisor.j2 dest=/etc/supervisor/conf.d/{{ app_name }}.conf
   notify:
     - start supervisor
+
+- name: restart all
+  notify:
+    - restart supervisor
+    - restart nginx
